objects/EOPS_Executive_Summary__c.object
<CustomObject>
    <description>EOPS opportunities that are Active and Delayed but NOT Lost or Won.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer name.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EOPS Executive Summary</relationshipLabel>
        <relationshipName>EOPS_Executive_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Enter country.</inlineHelpText>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Actions__c</fullName>
        <label>Critical Actions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Modified__c</fullName>
        <inlineHelpText>Date the project was last modified.</inlineHelpText>
        <label>Date Modified</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY11_Q1__c</fullName>
        <label>FY11 Q1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY11_Q2__c</fullName>
        <label>FY11 Q2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY11_Q3__c</fullName>
        <label>FY11 Q3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY11_Total__c</fullName>
        <formula>FY11_Q1__c  +  FY11_Q2__c  +  FY11_Q3__c  +  FY11_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY11 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY12_Total__c</fullName>
        <formula>FY12_Q1__c  +  FY12_Q2__c  +  FY12_Q3__c  +  FY12_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY12 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Included_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If yes, please tick.  If not, please let unchecked.</inlineHelpText>
        <label>Included in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Industrial/Oem</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Frame Contract</fullName>
                </value>
                <value>
                    <fullName>Lost Business</fullName>
                </value>
                <value>
                    <fullName>New Product Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Due_date__c</fullName>
        <inlineHelpText>Original date this project was requested/required.</inlineHelpText>
        <label>Order Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Business - Awarded tender, existing contract, project order</fullName>
                </value>
                <value>
                    <fullName>80% - Decision Taken in favour of TE, order not received</fullName>
                </value>
                <value>
                    <fullName>60% - Preferred Partner, decision not taken</fullName>
                </value>
                <value>
                    <fullName>30% - Qualified supplier</fullName>
                </value>
                <value>
                    <fullName>10% - Opportunity Identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>Product_Manager__c</referenceTo>
        <relationshipLabel>EOPS Executive Summary</relationshipLabel>
        <relationshipName>EOPS_Executive_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product Reporting Line.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>EOPS Executive Summary</relationshipLabel>
        <relationshipName>EOPS_Executive_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Region__c</fullName>
        <label>RSD Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West Europe</fullName>
                </value>
                <value>
                    <fullName>South Europe</fullName>
                </value>
                <value>
                    <fullName>Nordic</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Switz</fullName>
                </value>
                <value>
                    <fullName>UK/MEA</fullName>
                </value>
                <value>
                    <fullName>CIS/Russia</fullName>
                </value>
                <value>
                    <fullName>Anzpac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM_Region__c</fullName>
        <label>RSM Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium &amp; Luxembourg</fullName>
                </value>
                <value>
                    <fullName>France/Maghreb</fullName>
                </value>
                <value>
                    <fullName>Germany Axicom</fullName>
                </value>
                <value>
                    <fullName>Germany Industrial</fullName>
                </value>
                <value>
                    <fullName>Germany  Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Germnay Utility</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Middle East E. EQ</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Nordic &amp; Baltics</fullName>
                </value>
                <value>
                    <fullName>Russia &amp; CIS</fullName>
                </value>
                <value>
                    <fullName>South East Europe</fullName>
                </value>
                <value>
                    <fullName>Spain/Portugal</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Turkey/Iran</fullName>
                </value>
                <value>
                    <fullName>UK/Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revised_Order_Date__c</fullName>
        <inlineHelpText>Amended/revised date requested or required.  The original Order Due Date will be kept as a record.  This is a record of the latest date required.</inlineHelpText>
        <label>Revised Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Grouup__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia Crompton</fullName>
                </value>
                <value>
                    <fullName>Australia Distribution</fullName>
                </value>
                <value>
                    <fullName>Australia Industrial</fullName>
                </value>
                <value>
                    <fullName>Australia Transmission</fullName>
                </value>
                <value>
                    <fullName>Australia Utility</fullName>
                </value>
                <value>
                    <fullName>Central Africa</fullName>
                </value>
                <value>
                    <fullName>CIS East</fullName>
                </value>
                <value>
                    <fullName>CIS West</fullName>
                </value>
                <value>
                    <fullName>France N-HV-PEM</fullName>
                </value>
                <value>
                    <fullName>France Utilities</fullName>
                </value>
                <value>
                    <fullName>France WIP</fullName>
                </value>
                <value>
                    <fullName>French Africa</fullName>
                </value>
                <value>
                    <fullName>Gulf EEBO</fullName>
                </value>
                <value>
                    <fullName>Gulf Utilities</fullName>
                </value>
                <value>
                    <fullName>Italy Axicom</fullName>
                </value>
                <value>
                    <fullName>Italy Base Business</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Saudi EEBO</fullName>
                </value>
                <value>
                    <fullName>Saudi Utilities</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Switzerland Axicom</fullName>
                </value>
                <value>
                    <fullName>Switzerland Base Business</fullName>
                </value>
                <value>
                    <fullName>UK Dorman Smith</fullName>
                </value>
                <value>
                    <fullName>UK Industrial</fullName>
                </value>
                <value>
                    <fullName>UK Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active Quote Out</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Opportunity__c</fullName>
        <formula>FY11_Total__c  +  FY12_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Defensive Biz</fullName>
                </value>
                <value>
                    <fullName>Incremental Biz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The sales person name this customer is coded to.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EOPS_Executive_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EOPS Executive Summary</label>
    <nameField>
        <label>EOPS Executive Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOPS Executive Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>